[project]
name = "adversarial-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.19"
dependencies = [
    "numpy==1.22.4",
    "matplotlib==3.5.2",
    "pandas==1.4.3",
    "scikit-learn==1.1.2",
    "pillow==9.2.0",
    "tensorflow==2.9.1",
    "ipykernel>=7.1.0",
    "flask>=3.1.2",
]
